--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,11 @@ layout: compress
       {% include sidebar.html %}
     
       <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
-        {% if page.title %}<meta itemprop="headline" content="{{ page.title | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
-        <div class="page__inner-wrap">
+        {% if page.title %}
+          <meta itemprop="headline" content="{{ page.title | markdownify | strip_html | strip_newlines | escape_once }}">
+        {% endif %}
+        
+        <div class="page__inner-wrap" id="main-content">
           <section class="page__content" itemprop="text">
             {{ content }}
           </section>
@@ -29,5 +32,7 @@ layout: compress
 
     {% include scripts.html %}
 
+    <!-- 引入 spa.js -->
+    <script src="/assets/js/spa.js"></script>
   </body>
 </html>
