--- a/_includes/publication-entry.html
+++ b/_includes/publication-entry.html
@@ -1,5 +1,5 @@
-<div class="paper-box" style="margin-bottom: 1.2em;">
-  <div class="paper-box-text" style="font-size: 0.95em; line-height: 1.5;">
+<div class="paper-box" style="margin-bottom: 1.2em; width: 100%; max-width: 1100px; margin-left: auto; margin-right: auto;">
+  <div class="paper-box-text" style="font-size: 0.95em; line-height: 1.5; width: 100%;">
     
     <!-- Badge -->
     <div style="display: flex; align-items: center; justify-content: space-between;">
