--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,5 +41,6 @@ layout: compress
 
     <!-- 引入 spa.js -->
     <script src="/assets/js/spa.js"></script>
+    <script src="/assets/js/map-init-helper.js"></script>
   </body>
 </html>
